# agent-works

./: .env.example  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
examples/: builtin_demo.rs  cli_demo.rs  mcp_demo.rs  skill_demo.rs
src/: builder.rs  lib.rs
src/builtin/: file_exists.rs  list_directory.rs  mod.rs  read_file.rs  search_replace.rs  write_file.rs
src/cli/: mod.rs  printer.rs  repl.rs
src/mcp/: client.rs  enhanced_hub.rs  hub.rs  mod.rs  types.rs
src/skill/: detail_tool.rs  loader.rs  mod.rs  prompter.rs
tests/: integration_tests.rs
